--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=8082
-spring.application.name=eureka-client
+server.port=8083
+spring.application.name=ribbon-consumer
 eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
