--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>registry-server</module>
         <module>eureka-client</module>
         <module>ribbon-consumer</module>
+        <module>feign-consumer</module>
     </modules>
 
     <parent>
