--- a/feign-consumer/src/main/resources/application.properties
+++ b/feign-consumer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8084
 spring.application.name=feign-consumer
 eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
+feign.hystrix.enabled=true
