添加spring cloud bus

--- a/config-client/src/main/resources/application.properties
+++ b/config-client/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#Enable spring cloud bus 默认是true
+spring.cloud.bus.enabled=true
+# 开启消息跟踪 默认是flase
+spring.cloud.bus.trace.enabled=true
+management.endpoints.web.exposure.include=bus-refresh
 
+# rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
