--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8083
 spring.application.name=ribbon-consumer
 eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
+
+#management.endpoints.web.exposure.include=hystrix-stream
+management.endpoints.web.exposure.include=*
