--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -4,3 +4,5 @@ eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
 
 #management.endpoints.web.exposure.include=hystrix-stream
 management.endpoints.web.exposure.include=*
+
+#eureka.instance.metadata-map.cluster=Turbine
