--- a/sidecar-server/src/main/resources/application.properties
+++ b/sidecar-server/src/main/resources/application.properties
@@ -4,4 +4,5 @@ eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
 
 sidecar.port=8060
 sidecar.health-uri=http://localhost:${sidecar.port}/health.json
+sidecar.home-page-uri=http://localhost:${sidecar.port}/
 management.endpoints.web.exposure.include=*
