--- a/zuul-server/src/main/resources/application.properties
+++ b/zuul-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8085
 spring.application.name=zuul-server
 eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
+zuul.routes.api.path=/api/**
+zuul.routes.api.serviceId=eureka-client
 zuul.routes.api-a.path= /api-a/**
 zuul.routes.api-a.serviceId=ribbon-consumer
 zuul.routes.api-b.path= /api-b/**
