添加服务中心监听事件

--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=8081
 spring.application.name=eureka-client
 eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
+
+#开启健康检查（需要spring-boot-starter-actuator依赖）
+eureka.client.healthcheck.enabled = true
+#租期更新时间间隔（默认30秒）
+eureka.instance.lease-renewal-interval-in-seconds =10
+#租期到期时间（默认90秒）
+eureka.instance.lease-expiration-duration-in-seconds =30
