--- a/registry-server/src/main/resources/application.properties
+++ b/registry-server/src/main/resources/application.properties
@@ -6,3 +6,8 @@ eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone = http://${eureka.instance.hostname}:${server.port}/eureka/
+
+#（设为false，关闭自我保护主要）
+eureka.server.enable-self-preservation=false
+#清理间隔（单位毫秒，默认是60*1000）
+eureka.server.eviction-interval-timer-in-ms=6000 
