--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8081
 spring.application.name=eureka-client
 eureka.client.service-url.defaultZone = http://localhost:8080/eureka/
 
-#¿ªÆô½¡¿µ¼ì²é£¨ĞèÒªspring-boot-starter-actuatorÒÀÀµ£©
+#enable healthe check, ä¾èµ–äºspring-boot-starter-actuator
 eureka.client.healthcheck.enabled = true
-#×âÆÚ¸üĞÂÊ±¼ä¼ä¸ô£¨Ä¬ÈÏ30Ãë£©
+#è¡¨ç¤ºeureka clientå‘é€å¿ƒè·³ç»™serverç«¯çš„é¢‘ç‡
 eureka.instance.lease-renewal-interval-in-seconds =10
-#×âÆÚµ½ÆÚÊ±¼ä£¨Ä¬ÈÏ90Ãë£©
+#Eureka serverè‡³ä¸Šä¸€æ¬¡æ”¶åˆ°clientçš„å¿ƒè·³ä¹‹å
 eureka.instance.lease-expiration-duration-in-seconds =30
